--- a/templates/back_content/new_article.html
+++ b/templates/back_content/new_article.html
@@ -17,7 +17,7 @@
         <div class="row expanded">
             <div class="box">
                 <div class="title-area">
-                    <h2>{% trans "New Article" %}</h2>
+                    <h2>{% trans "New Article" context "bc" %}</h2>
                 </div>
                 <div class="content">
                     <p>{% trans "To submit an article, click the start button below" %}.</p>
@@ -25,23 +25,23 @@
                         {% csrf_token %}
                         <button type="submit" class="success button"><i class="fa fa-upload">&nbsp;</i>{% trans "Start Submission" %}</button>
                         <a href="{% url 'bc_xml_import_upload' %}" class="success button"><i class="fa fa-upload">&nbsp;</i>
-                            {% trans "Submit JATS XML for Import" %}</a>
+                            {% trans "Submit JATS XML for Import" context "bc" %}</a>
                         <a href="{% url 'bc_doi_import' %}" class="success button"><i class="fa fa-upload">&nbsp;</i>
-                            {% trans "Import Metadata from DOI or URL" %}</a>
+                            {% trans "Import Metadata from DOI or URL" context "bc" %}</a>
                     </form>
                 </div>
                 <div class="title-area">
-                    <h2>{% trans "Existing Articles" %}</h2>
+                    <h2>{% trans "Existing Articles" context "bc" %}</h2>
                 </div>
                 <div class="content">
                     <table class="table table-bordered" id="unassigned">
                         <thead>
                         <tr>
-                            <th>{% trans "Title" %}</th>
-                            <th>{% trans "Submitted" %}</th>
-                            <th>{% trans "Main Author" %}</th>
-                            <th>{% trans "Section" %}</th>
-                            <th>{% trans "Actions" %}</th>
+                            <th>{% trans "Title" context "bc" %}</th>
+                            <th>{% trans "Submitted" context "bc" %}</th>
+                            <th>{% trans "Main Author" context "bc" %}</th>
+                            <th>{% trans "Section" context "bc" %}</th>
+                            <th>{% trans "Actions" context "bc" %}</th>
                         </tr>
                         </thead>
                         <tbody>
@@ -60,7 +60,7 @@
                             </tr>
                             {% empty %}
                             <tr>
-                                <td>{% trans "No articles in this stage" %}</td>
+                                <td>{% trans "No articles in this stage" context "bc" %}</td>
                                 <td></td>
                                 <td></td>
                                 <td></td>
