--- a/templates/back_content/submission_author.html
+++ b/templates/back_content/submission_author.html
@@ -5,7 +5,7 @@
      data-animation-out="slide-out-down">
     <div class="card">
         <div class="card-divider">
-            <h4><i class="fa fa-user">&nbsp;</i>{% trans "Add New Author" %}</h4>
+            <h4><i class="fa fa-user">&nbsp;</i>{% trans "Add New Author" context "bc" %}</h4>
         </div>
         <div class="card-section">
             <button class="close-button" data-close aria-label="Close reveal" type="button">
@@ -61,7 +61,7 @@
                 </div>
 
                 <button class="success button pull-right" type="submit" name="add_author"><i class="fa fa-user">
-                    &nbsp;</i>{% trans "Add Author" %}
+                    &nbsp;</i>{% trans "Add Author" context "bc" %}
                 </button>
             </form>
             <script>
